Решение задачи 2.2.3